# flutter_analyze_codeclimate

./: .gitignore  Cargo.toml  flutter_analyze.txt  report.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: codeclimate_issue.rs  flutter_issue.rs  main.rs
