[package]
name = "flutter_analyze_codeclimate"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Florian Gebhardt"]
description = "A small utility tool to convert flutter analyze output to the codeclimate format to use as a gitlab CI artifact."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
md5 = "0.7.0"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
